(almost) Full completion of the site

--- a/assos/_posts/2015-07-24-Comif.html
+++ b/assos/_posts/2015-07-24-Comif.html
@@ -2,6 +2,17 @@
 layout : page
 title  : Comission Foyer
 banner : img/comif.jpg
+subheader : Bien plus qu'un bar !
 name   : Comif'
 ---
+
+<p class="text-justify">
+  Qu’il soit le matin ou l’après-midi, une pause s’impose entre les cours. Et là, c’est le drame, tu n’as
+  pas mangé ce matin, pas pris de dessert ce midi, ton ventre gronde. Heureusement pour toi, la Comif’ est
+  là : pains au chocolat, croissants, café, snacks ou sodas, toutes les pauses sont une bonne occasion
+  pour manger un bout entre amis, dans le sucre et la bonne humeur !<br/>
+  Mais ce n'est pas tout ! Chaque semaine tu peux commander du pain et un panier légume !<br>
+  Et ce n'est pas fini, un jeudi par mois nous organisons une Tite Bouffe, un moment convivial durant lequel
+  tout le monde peut venir dîner ensemble autour de pizzas, burger, repas japonais...
+</p>
 
