Add logo webpage comif

--- a/assos/_posts/2015-07-24-Comif.html
+++ b/assos/_posts/2015-07-24-Comif.html
@@ -4,6 +4,7 @@ title  : Commission Foyer
 banner : img/comif.jpg
 subheader : Bien plus qu'un bar !
 name   : Comif'
+logo : img/logo_comif.jpg
 ---
 
 <p class="text-justify">
