fix(content): index content typo

--- a/index.html
+++ b/index.html
@@ -7,5 +7,5 @@ layout: default
 
     <h1>Bienvenue sur MyISMIN</h1>
 
-    <p>Vous trouverez sur ce site des informations sur la vie à l'école ainsi que la présentation des clubs et associations présentes !</p>
+    <p>Vous trouverez sur ce site des informations sur la vie à l'école ainsi que la présentation des clubs et associations présents !</p>
 </div>
